---------------------------------------------------------------------------
Version 1.10.2 (RGer), 2005-09-2?
- added comparison operations in property-based filters:
  * isequal
  * startswith
- added ability to negate all property-based filter comparison oprations
  by adding a !-sign right in front of the operation name
- fixed a bug that caused rsyslogd to dump core when the compare value
  was not quoted in property-based filters
- fixed a bug in the new CStr compare function which lead to invalid
  results (fortunately, this function was not yet used widely)
---------------------------------------------------------------------------
Version 1.10.1 (RGer), 2005-09-23
- added the ability to execute a shell script as an action.
  Thanks to Bjoern Kalkbrenner for providing the code!
- fixed a bug in the MySQL code; due to the bug the automatic one-time
  retry after an error did not happen - this lead to error message in
  cases where none should be seen (e.g. after a MySQL restart)
- fixed a security issue with SQL-escaping in conjunction with
  non-(SQL-)standard MySQL features.
---------------------------------------------------------------------------
Version 1.10.0 (RGer), 2005-09-20
  REMINDER: 1.10 is the first unstable version if the 1.x series!
- added the capability to filter on any property in selector lines
  (not just facility and priority)
- changed stringbuf into a new counted string class
- added support for a "discard" action. If a selector line with
  discard (~ character) is found, no selector lines *after* that
  line will be processed.
- thanks to Andres Riancho, regular expression support has been
  added to the template engine
- added the FROMHOST property in the template processor, which could
  previously not be obtained. Thanks to Cristian Testa for pointing
  this out and even providing a fix.
- added display of compile-time options to -v output
- performance improvement for production build - made some checks