@@ -5,6 +5,9 @@ Version 1.10.2 (RGer), 2005-09-2?
   * startswith
 - added ability to negate all property-based filter comparison oprations
   by adding a !-sign right in front of the operation name
+- changed the $-config line directives to be case-INsensitive
+- new command line option -w added: "do not display warnings if messages
+  from disallowed senders are received"
 - fixed a bug that caused rsyslogd to dump core when the compare value
   was not quoted in property-based filters
 - fixed a bug in the new CStr compare function which lead to invalid
